package net.proselyte.basepatterns.behavioral.chain;

public class BugTracker {
    public static void main(String[] args) {
    }
}
