package net.proselyte.basepatterns.behavioral.chain;

public class EmailNotifier {


}
