package net.proselyte.basepatterns.behavioral.chain;

public abstract class Notifier {
}
