package net.proselyte.basepatterns.behavioral.chain;

public class Priority {
}
