package net.proselyte.basepatterns.behavioral.chain;

public class SMSNotifier  {

    public SMSNotifier() {
    }
}
