package net.proselyte.basepatterns.behavioral.chain;

public class SimpleReportNotifier {

    public SimpleReportNotifier(int priority) {
    }

}
